fix: css align mobile

--- a/styles/circle.module.css
+++ b/styles/circle.module.css
@@ -15,6 +15,7 @@
     width: 20rem;
     height: 20rem;
     border: 10px solid #E40037;
+    margin-left: 2px;
   }
 }
 
